--- a/print.css
+++ b/print.css
@@ -103,3 +103,11 @@ img{
 .date{
     font-size: 20px;
 }
+
+.saisie{
+    border: hidden; 
+    border-bottom: 1px dashed black;
+    text-align: left;
+    font-family: helvetica;
+    font-weight: bold;
+}
